syntax = "proto3";

message ProtobufLib {
  // Mock message for testing
  string test_field = 1;
} 